# osmose-app

./: .babelrc  .dockerignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CITATION.cff  README.md  docker-compose.yml  elements.html  generic.html  index.html  manage.py  overview.html  package-lock.json  package.json  products.html  pyproject.toml  react_doc.html  schema.graphql  team.html
.github/workflows/: backend.yml  continuous-integration.yml  cypress.yml  deploy-coverage.yml  documentation.yml  frontend.yml
aplose-frontend/: README.md  index.html  package.json
aplose-frontend/src/: AnnotationCampaignDetail.tsx  AnnotationCampaignList.tsx  AnnotationTaskList.tsx  App.tsx  CreateAnnotationCampaign.tsx  DatasetList.tsx  EditAnnotationCampaign.tsx  ListChooser.tsx  Login.tsx  utils.tsx
assets/css/: main.css
backend/: asgi.py  schema.py  settings.py  start.sh  urls.py  views.py  wsgi.py
backend/api/: admin.py  apps.py  models.py  urls.py  views.py
backend/aplose/: apps.py  urls.py
backend/aplose_auth/: apps.py
backend/config/: settings.py  urls.py
backend/old_api/: urls.py
backend/osmosewebsite/: apps.py  pagination.py  tests.py  urls.py
backend/settings/: __init__.py  base.py  development.py  production.py
backend/sql/: apps.py  tests.py  urls.py  views.py
backend/tests/: __init__.py
backend/utils/: admin.py  filters.py  middlewares.py  renderers.py  schema.py  serializers.py  tests.py  validators.py
docker-local/: docker-compose.yml
docker-local/dockerfiles/: back.dockerfile  front.dockerfile  nginx.conf.template  nginx.dockerfile
dockerfiles/: back.dockerfile  back_dev.dockerfile  front.dockerfile  nginx.conf  nginx.conf.template
docs/: react.md  storybook.md  user_guide_annotator.md
docs/tutorial/: README.md
frontend/: .eslintrc.cjs  .eslintrc.json  .flowconfig  .travis.yml  README.md  babel.config.js  codegen.ts  cypress.config.js  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  schema.graphql  tsconfig.json  vite.config.ts
frontend/docs/: index.md
frontend/public/: humans.txt  service-worker.js
frontend/src/: AnnotationCampaignDetail.js  AnnotationCampaignDetail.tsx  AnnotationCampaignList.js  AnnotationCampaignList.tsx  AnnotationTaskList.js  AnnotationTaskList.tsx  App.js  App.tsx  CreateAnnotationCampaign.js  CreateAnnotationCampaign.tsx  DatasetList.js  DatasetList.tsx  EditAnnotationCampaign.js  EditAnnotationCampaign.tsx  FlashMessage.js  ListChooser.js  ListChooser.tsx  Login.js  Login.tsx  Toast.js  custom.d.ts  index.css  main.tsx  modalNewData.js  utils.js  utils.ts  utils.tsx
frontend/test/: AnnotationCampaignDetail.test.js  AnnotationCampaignList.test.js  AnnotationTaskList.test.js  App.test.js  CreateAnnotationCampaign.test.js  DatasetList.test.js  ListChooser.test.js  Login.test.js  Toast.test.js
frontend/tests/: 00_Home.spec.ts  01_Login.spec.ts  02_Navbar.spec.ts  (+19 more)
public/: humans.txt  index.html
src/: AnnotationCampaignDetail.js  AnnotationCampaignList.js  AnnotationTaskList.js  App.js  App.tsx  AudioAnnotator.js  AudioPlayer.js  CreateAnnotationCampaign.js  DatasetList.js  Datasets.js  LegacyAudioAnnotator.js  Login.js  Ontology_Cetaceans.pptx  Toast.js  index.css  ontology.json  result.csv  utils.js
test/: AnnotationCampaignList.test.js  AnnotationTaskList.test.js  App.test.js  AudioAnnotator.test.js  CreateAnnotationCampaign.test.js  DatasetList.test.js  Datasets.test.js  LegacyAudioAnnotator.test.js  Toast.test.js  eslint.js
website/: .npmrc  README.md  package-lock.json  package.json
(+1746 files in other folders)
